[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apside"
version = "0.1.0"
description = "High-precision conversion between Gregorian calendar datetimes and Julian Dates (JD)"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Venkata Siddharth Pendyala", email = "venkatasiddharthpendyala@outlook.com" }
]
keywords = ["astronomy", "time", "julian", "calendar", "precision"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/VPyndyala/Apside"
Source = "https://github.com/VPyndyala/Apside"
Documentation = "https://github.com/VPyndyala/Apside#readme"
Issues = "https://github.com/VPyndyala/Apside/issues"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["apside*"]

[tool.setuptools.package-data]
"apside" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
